--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         }
     </style>
     <!-- 瀏覽人數 -->
-    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+    <!-- <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script> -->
 
     <!-- VUE -->
 
@@ -89,12 +89,12 @@
                                 <p>HOME</p>
                             </a>
                         </li>
-                        <li><a href="./about.html">
+                        <!-- <li><a href="./about.html">
                                 <h6>關於愷迪</h6>
                                 <p>ABOUT KD</p>
                             </a>
 
-                        </li>
+                        </li> -->
                         <li><a href="./product.html">
                                 <h6>產品</h6>
                                 <p>PRODUCT</p>
@@ -152,12 +152,12 @@
                     <li><a href="./index.html">
                             <h6>首頁</h6>
                         </a>
-                    </li>
+                    <!-- </li>
                     <li><a href="./about.html">
                             <h6>關於愷迪</h6>
                         </a>
 
-                    </li>
+                    </li> -->
                     <li><a href="./product.html">
                             <h6>產品</h6>
                         </a>
@@ -172,6 +172,16 @@
 
         <div>
             <div style="margin: 50px auto;width: 70%;">
+
+
+                <div class="row">
+
+                    <img class="col-11" style="margin: 30px 0 70px 0; " src="照片/網站DM1.jpg" alt="kaidi_logo">
+                </div>
+
+
+
+
                 <h1 style="color: rgb(63, 179, 88);">衛教宣導</h1>
                 <div style="word-wrap:break-word;">
 
@@ -218,8 +228,56 @@
                             <br>(2)如果您的血壓範圍在120/80-140/90
                             mm/Hg之間，為血壓前期，表示您有可能發展成為高血壓，建議應立即改善生活型態如：戒菸酒、減重、規律運動、養成低鹽、少油、多蔬果之健康飲食型態與習慣，並尋求醫療人員評估後續血壓變化情形。
                             <br>(3)若您的血壓超過140/90 mm/Hg，建議您應與醫師討論是否需要進一步治療，以避免後續心臟病或中風發生。
-                            <br>資料來源：worldhypertensionleague.orghttp://www.worldhypertensionleague.org/
+                            <br>資料來源：http://www.worldhypertensionleague.org/
                         </li>
+
+                        <H4 style="margin: 40px 0;">血脂正常就可以不用再服用降血脂藥物了嗎?</H4>
+                        <li style="padding: 0 20px;color: grey;line-height: 40px;">
+                            提醒患有血脂異常的民眾，一定要長期認真的控制血脂，而不是發現血脂異常就趕快服藥，血脂正常後就自行停藥，這是不對的!
+                            雖然服藥時血脂改善，但停藥後很可能又回到異常情況，提醒民眾要遵循醫師指示切勿隨意停藥，並定期回診了解血脂控制情形。
+                            高血脂是心臟疾病的危險因子之一，國民健康署積極呼籲民眾養成健康生活型態，平時注意均衡飲食、少油少鹽多纖維、戒菸、節酒、多運動，並定期接受健康檢查，以降低疾病發生之風險。
+                            <br>
+                            資料來源：https://www.hpa.gov.tw/Pages/Detail.aspx?nodeid=127&pid=14846
+                        </li>
+
+                        <H4 style="margin: 40px 0;">如何做個「好心」人 避免心臟傷很大</H4>
+                        <li style="padding: 0 20px;color: grey;line-height: 40px;">
+                            近期名人接連因心血管疾病驟逝，令人惋惜且不捨。心血管疾病常發生突然，導致無法挽回的憾事，留給家人無盡傷痛，但這也讓民眾警覺心血管疾病的重要性。其實，八成的心臟病與中風的過早死亡是可以預防的，日常生活中，有許多壞習慣，在不知不覺中傷害心臟。國民健康署賈淑麗代理署長呼籲，預防心血管疾病的王道，就是從健康生活型態做起，才能避免讓這種傷痛發生在自己和家人身上！
+
+                            壞習慣拉近與心血管疾病的距離檢視單: 
+                            •壞習慣1.飲食不均衡，愛重鹹、嗜糖、油炸、加工品、精緻化飲食； 
+                            •壞習慣2.缺乏運動；
+                            •壞習慣3.睡眠不規律；
+                            •壞習慣4.抽菸、喝酒不忌諱；
+                            •壞習慣5.體重過重或肥胖不在意；
+                            •壞習慣6.有三高（高血壓、高血糖及高血脂）等慢性病不控制。
+                            
+                            別仗年輕而輕忽您的「心」 
+                                根據衛生福利部108年死因統計，心臟病是國人第二號殺手，平均每26分鐘就有1人死於心臟病，如再加上腦中風、高血壓、糖尿病及腎臟病等血管性疾病，每年則造成5.3萬人死亡，超過頭號殺手癌症奪走的人命。老化雖是心血管疾病的危險因子之一，但隨著生活型態改變，工作壓力大、少運動、外食族居多的年輕族群，更應愛護自己的心，檢視壞習慣有多少，風險就會有多高，千萬別仗著年輕就不管，維持健康生活型態，避免心血管疾病帶來的威脅才是上上之策。另春季氣溫變化大，早晚溫差大，要注意保暖，避免血壓突然增高。
+                            1.健康飲食與運動：採低油、糖、鹽及高纖飲食，每週累積150分鐘的中度身體活動(例如快走、慢走、騎自行車)、控制體重(維持BMI正常值)、良好睡眠，都是杜絕慢性病的通則，更是健康長壽的良方。
+                            2.戒除不良生活嗜好：研究發現就算每天僅吸1支菸，罹患冠狀動脈心臟病的機率比不吸菸的人增加5成、中風的機率更增加超過2成。民眾如有任何戒菸方面的問題，可撥打國民健康署免費戒菸諮詢專線0800-636363。另外世界衛生組織(WHO)統計2016年全球因酒害導致的死亡人數超過300萬人，其中就有19%死於心血管疾病，國民健康署建議盡量避免飲酒，如有需要，以茶(水)代酒，是健康聰明的選擇。
+                            3.控制三高慢性病：有三高的民眾千萬別鐵齒，更要小心心血管疾病找上門，應積極採行健康的生活型態，定期量血壓及血糖，遵照醫師處方服藥並定期回診追蹤，切勿自行依症狀調整藥量或停藥。
+                            4.定期健康檢查：國民健康署提供40到64歲民眾每3年一次，65歲以上民眾每年1次的免費成人預防保健服務，鼓勵民眾可善加利用。
+                            
+                            辨識心血管疾病急性徵兆，儘快就醫避免憾事發生！ 
+                                心血管疾病之急性發作如心肌梗塞及腦中風是危及生命之緊急狀況，中華民國血脂及動脈硬化學會葉宏一名譽理事表示，儘早就醫可減少死亡及病後殘留失能之嚴重度，增加復原機會。多留意自己或親友身體的變化，如果出現胸悶、胸痛、心悸、呼吸困難、噁心、冒冷汗、頭暈或暈厥等症狀，另更年期女性可能出現氣喘、背痛等非典型症狀，很有可能是心臟病急性發作。國民健康署提醒記住中風症狀FAST口訣：臉部(Face)表情不對稱、雙手(Arm)力氣不一樣、或講話(Speech)變得不清楚，有任一症狀，記下時間點（Time）儘速就醫，避免錯失黃金治療期而造成遺憾。 <br>
+                            資料來源：https://www.hpa.gov.tw/Pages/Detail.aspx?nodeid=4306&pid=13862
+                        </li>
+
+                        <H4 style="margin: 40px 0;">聽說捐血可以降低血脂，所以透過捐血可以解決高血脂問題嗎？</H4>
+                        <li style="padding: 0 20px;color: grey;line-height: 40px;">
+                            有民眾認為，捐血可以增加新陳代謝，有效降低血脂肪。然而，以一位65公斤的人，總血量5000毫升為例，捐血500毫升的話，所減少的十分之一的血量，內含脂肪約只有1公克，況且新生的血液中仍然會從身體各處組織帶出血脂成分，所以並非僅靠捐血就可以降低10%血脂指數。另外，如果捐血人本身血脂肪過高，捐出來的脂血(又稱乳糜血)所製備的血品可能面臨廢棄不用或需特殊處理，患者輸用也有血管阻塞之風險。
+                            建議降血脂的根本之道，還是從飲食少油少糖與適當增加運動量著手，必要時配合醫師建議與處方用藥。   <br>
+                            資料來源：https://www.hpa.gov.tw/Pages/Detail.aspx?nodeid=127&pid=13047
+                        </li>
+
+                        <H4 style="margin: 40px 0;">遠離代謝症候群，就從量腰圍開始</H4>
+                        <li style="padding: 0 20px;color: grey;line-height: 40px;">
+                            遠離代謝症候群，就從量腰圍開始 18歲以上民眾近6成有過重且腰圍過粗；40歲以上民眾超過5成有代謝症候群 代謝症候群5大警戒指標是「三高加兩害」，血壓高、飯前血糖高、三酸甘油酯高、腰圍過粗、高密度膽固醇偏低等，前述五項有三項或超過三項異常，即屬代謝症候群；患有代謝症候群者，其未來罹患糖尿病機率比一般人高6 倍、高血壓高4 倍、高血脂高3 倍、心臟病及腦中風高2 倍。「腰圍」大小是反映腹部肥胖的多寡，也是判斷罹患代謝症候群、心血管疾病機率的方法之一；依據國民健康署102-105年國民營養健康狀況變遷調查，18歲以上民眾近6成有身體質量指數過重（24≦BMI<27）且腰圍過粗，另，40歲以上民眾超過5成有腰圍過粗且罹患代謝症候群情形，此外，依據本署調查發現，有6成以上民眾超過半年沒量過或從未量過腰圍，因此，必須強化國人代謝症候群防治相關識能。 顧健康，就從量腰圍開始，免費參加成人健康檢查，遠離代謝症候群 量腰圍是最簡易判斷罹患代謝症候群的方法，國民健康署自100年起迄今，於成人健康檢查納入量腰圍服務，呼籲及提醒40歲以上民眾善加使用（網址: 免費健康檢查-成人資訊），並從今天開始，為自己立下健康腰圍目標、定期量腰圍、實行健康生活5絕招: 「聰明選、健康吃」、「站起來、動30」、「不吸菸、少喝酒」、「壓力去、活力來」、「做檢查、早發現」，做好腰圍管理，遠離代謝症候群的威脅。 預防代謝症候群5大絕招 第一招「聰明選、健康吃」:實行低糖、低油、低鹽、高纖健康飲食、食物儘量選擇蒸、煮、滷、涼拌、食物去皮去肥肉。 第二招「站起來、動30」:減少久坐，一天至少運動30分鐘，慢跑、騎單車、上下樓梯、仰臥起坐、伸展操、瑜珈、打球等。 第三招「不吸菸、少喝酒」:及早戒菸，洽詢免費戒菸專線0800-636363或參加門診戒菸服務，減少飲酒量，打造健康人生。 第四招「壓力去、活力來」:關心家人的的情緒壓力，適時轉移焦慮、憂鬱，陪做運動、聊天、唱歌等，適當發洩情緒。 第五招「做檢查、早發現」:善用國民健康署提供的40歲以上未滿65歲每3年1次或滿65歲以上每年1次的成人預防保健服務，進行代謝症候群篩檢，量血壓、腰圍、血糖等，及早發現疾病及早預防。   <br>
+                            資料來源：https://www.hpa.gov.tw/Pages/Detail.aspx?nodeid=1253&pid=7562
+                        </li>
+
+
 
                     </ul>
                 </div>
@@ -327,6 +385,7 @@
 
         </div>
         </div>
+
         <div class="footer_end">
             <p>© 2020 臺灣愷迪研發科技股份有限公司版權所有。 | Designed by KD.<br>
             </p>
@@ -341,6 +400,8 @@
                 </span>
             </div>
         </div>
+
+
 
     </footer>
     <!-- <div style="background-color: green;height: 100px;"></div> -->
