--- a/product.html
+++ b/product.html
@@ -125,12 +125,12 @@
                                 <p>HOME</p>
                             </a>
                         </li>
-                        <li><a href="./about.html">
+                        <!-- <li><a href="./about.html">
                                 <h6>關於愷迪</h6>
                                 <p>ABOUT KD</p>
                             </a>
 
-                        </li>
+                        </li> -->
                         <li><a href="./product.html">
                                 <h6>產品</h6>
                                 <p>PRODUCT</p>
@@ -189,11 +189,11 @@
                             <h6>首頁</h6>
                         </a>
                     </li>
-                    <li><a href="./about.html">
+                    <!-- <li><a href="./about.html">
                             <h6>關於愷迪</h6>
                         </a>
 
-                    </li>
+                    </li> -->
                     <li><a href="./product.html">
                             <h6>產品</h6>
                         </a>
@@ -267,13 +267,13 @@
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <!-- <div class="col-md-3">
                     <div >
                         <img style="object-fit:cover;height: 100%;transform:translate(-35px) scale(0.9)" src="./照片/p_08.jpg ">
                     </div>
-                </div>
+                </div> -->
 
-                <div class="col-md-3">
+                <!-- <div class="col-md-3">
                     <div >
                         <img style="object-fit:cover;height: 100%;transform:translate(-10px)" src="./照片/p_09.jpg ">
                     </div>
@@ -328,7 +328,7 @@
                     <div>
                         <img style="object-fit:cover;height: 100%;transform:translate(-5px) " src="./照片/p_19.jpg ">
                     </div>
-                </div>
+                </div> -->
 
 
 
