--- a/contact.html
+++ b/contact.html
@@ -85,12 +85,12 @@
                                 <p>HOME</p>
                             </a>
                         </li>
-                        <li><a href="./about.html">
+                        <!-- <li><a href="./about.html">
                                 <h6>關於愷迪</h6>
                                 <p>ABOUT KD</p>
                             </a>
 
-                        </li>
+                        </li> -->
                         <li><a href="./product.html">
                                 <h6>產品</h6>
                                 <p>PRODUCT</p>
@@ -149,12 +149,12 @@
                 <li><a href="./index.html">
                         <h6>首頁</h6>
                     </a>
-                </li>
+                <!-- </li>
                 <li><a href="./about.html">
                         <h6>關於愷迪</h6>
                     </a>
 
-                </li>
+                </li> -->
                 <li><a href="./product.html">
                         <h6>產品</h6>
                     </a>
