--- a/about.html
+++ b/about.html
@@ -90,11 +90,17 @@
 
                         </li>
                         <li><a href="./product.html">
-                                <h6>產品</h6>
-                                <p>PRODUCT</p>
-                            </a>
+                            <h6>研發產品</h6>
+                            <p>PRODUCT</p>
+                        </a>
 
-                        </li>
+                    </li>
+                    <li><a href="./product.html">
+                            <h6>一般產品</h6>
+                            <p>PRODUCT</p>
+                        </a>
+
+                    </li>
                         <li><a href="./contact.html">
                                 <h6>聯絡我們</h6>
                                 <p>CONTACT US</p>
@@ -104,7 +110,7 @@
                     </ul>
 
                     <div class="header_community ">
-                        <a href="https://www.facebook.com/">
+                        <a href="https://www.facebook.com/%E6%84%B7%E8%BF%AA%E7%A0%94%E7%99%BC%E7%A7%91%E6%8A%80-103166575533394/">
                             <div>
                                 <img src="./img/facebook_icon.svg " alt="facebook_img">
                             </div>
@@ -153,9 +159,17 @@
 
                     </li>
                     <li><a href="./product.html">
-                            <h6>產品</h6>
-                        </a>
-                    </li>
+                        <h6>研發產品</h6>
+
+                    </a>
+
+                </li>
+                <li><a href="./product.html">
+                        <h6>一般產品</h6>
+
+                    </a>
+
+                </li>
                     <li><a href="./contact.html">
                             <h6>聯絡我們</h6>
                         </a>
@@ -239,7 +253,7 @@
                 <p>我們的社群網站</p>
                 <div class="footer_community_icon">
                     <div>
-                        <a href="https://www.facebook.com/">
+                        <a href="https://www.facebook.com/%E6%84%B7%E8%BF%AA%E7%A0%94%E7%99%BC%E7%A7%91%E6%8A%80-103166575533394/">
                             <img src="./img/facebook_icon.svg" alt="facebook_img"> </a>
                     </div>
 
